--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UsabilityHub</title>
+    <title>UsabilityHub — Interactive UX/UI Showcase</title>
+    <link rel="shortcut icon" href="All-img/logo1.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-queries.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Open Graph -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://usabilityhub-divyamsharma.netlify.app/#" />
+<meta property="og:title" content="Usability Hub — Interactive UX/UI Showcase" />
+<meta property="og:description" content="A clean and interactive frontend project showcasing usability-focused design. Highlights modern UI patterns, accessibility, and smooth interactions." />
+<meta property="og:image" content="https://usabilityhub-divyamsharma.netlify.app/og.png" />
+<meta property="og:image:width" content="1080" />
+<meta property="og:image:height" content="570" />
+<meta property="og:site_name" content="Usability Hub" />
+<meta property="og:locale" content="en_US" />
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:url" content="https://usabilityhub-divyamsharma.netlify.app/#" />
+<meta name="twitter:title" content="Usability Hub — Interactive UX/UI Showcase" />
+<meta name="twitter:description" content="An interactive UX/UI project emphasizing usability, accessibility, and modern frontend design patterns." />
+<meta name="twitter:image" content="https://usabilityhub-divyamsharma.netlify.app/og.png" />
+
 </head>
 
 <body>
